--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
   box-sizing: border-box;
+  --white: #FFFFFF;
+  --light-gray: #D4D4D4;
+  --gainsboro: #DBDBDB;
+  --granite-gray: #666666;
+  --blue-jeans: #52B6FF;
+}
+
+body {
+  font-family: 'Lexend Deca', sans-serif;
+  background-color: var(--white);
 }
