Adicionar mais variaveis de cor

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -7,6 +7,8 @@
   --gainsboro: #DBDBDB;
   --granite-gray: #666666;
   --blue-jeans: #52B6FF;
+  --anti-flash-white: #F2F2F2;
+  --silver-foil: #AFAFAF;
 }
 
 body {
