Adicionar variaveis de cores

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -9,6 +9,10 @@
   --blue-jeans: #52B6FF;
   --anti-flash-white: #F2F2F2;
   --silver-foil: #AFAFAF;
+  --green-blue: #126BA5;
+  --gray: #BABABA;
+  --android-green: #8FC549;
+  --bright-gray: #EBEBEB;
 }
 
 body {
